--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.DashboardActivity">
 
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -24,39 +25,36 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hi, John"
-                android:textSize="28sp"
                 android:layout_marginTop="16dp"
+                android:text="Hi, John"
                 android:textColor="@color/dark_purple"
-                />
+                android:textSize="28sp" />
 
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Good afternoon!"
-                android:textSize="18sp"
                 android:layout_marginTop="16dp"
+                android:text="Good afternoon!"
                 android:textColor="@color/dark_purple"
-                />
+                android:textSize="18sp" />
 
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="@drawable/edittext_bg"
-                android:ems="10"
-                android:inputType="text"
-                android:text="Search"
-                android:padding="16dp"
-                android:drawableStart="@drawable/search"
-                android:drawablePadding="16dp"
-                android:textColor="@color/dark_purple"
-                android:textColorHint="@color/dark_purple"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                />
+                android:background="@drawable/edittext_bg"
+                android:drawableStart="@drawable/search"
+                android:drawablePadding="16dp"
+                android:ems="10"
+                android:inputType="text"
+                android:padding="16dp"
+                android:text="Search"
+                android:textColor="@color/dark_purple"
+                android:textColorHint="@color/dark_purple" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -93,12 +91,11 @@
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@drawable/pic_banner"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginEnd="16dp"
-                    />
+                    android:layout_marginBottom="1dp"
+                    android:src="@drawable/pic_banner"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -111,15 +108,13 @@
                 android:orientation="horizontal">
 
 
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Ongoing Project"
-                    android:textStyle="bold"
                     android:textColor="@color/dark_purple"
-                    />
+                    android:textStyle="bold" />
 
 
                 <TextView
@@ -127,19 +122,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="View all"
-                    android:textStyle="bold"
                     android:textColor="@color/dark_purple"
-                    />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/viewOnGoing"
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                />
+                android:layout_marginTop="16dp" />
 
 
         </LinearLayout>
@@ -152,60 +145,34 @@
         android:layout_height="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:id="@+id/app_bar"
-            android:layout_gravity="bottom">
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabCradleMargin="10dp"
+            android:backgroundTint="@android:color/transparent"
+            app:fabCradleRoundedCornerRadius="10dp"
+            app:fabCradleVerticalOffset="10dp">
 
-
-            <LinearLayout
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        app:srcCompat="@drawable/bottom_btn1"
-                        />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:layout_marginTop="8dp"
-                        android:text="Home"
-                        android:textColor="@color/dark_purple"
-                        />
-
-
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-
+                android:layout_marginEnd="16dp"
+                app:menu="@menu/home_menu" />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
 
-
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/baseline_add_24"
+            app:layout_anchor="@id/bottomAppBar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
