Profile Activity UI, Adapter Archive and myteam, Profile Activity Backend

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -16,12 +16,12 @@
         android:title="" />
 
     <item
-        android:id="@+id/tasks"
+        android:id="@+id/profile"
         android:icon="@drawable/tasks_icon"
         android:title="Profile" />
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/settings"
         android:icon="@drawable/profile_icon"
         android:title="Settings" />
 
